...
    android:layout_height="match_parent"
    android:background="@drawable/background_panduan"
    tools:context=".homeUser.menuKuesioner.KategoriKuesioner">


    <Button
        android:id="@+id/penjurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_kategori_kuesioner"
...
