...
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/mulai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/hasilPenjurusan"
...
